--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.7",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.13"
     }
 }
